tests/out/error/result/or_type_mismatch.out
tests/out/error/result/or_type_mismatch.in.bt:9:6 error: or-block returns string, expected i32
tests/out/error/result/or_type_mismatch.in.bt:13:6 error: or-block returns void, expected i32
